force-app/main/default/objects/Parent_Guardian__c/Parent_Guardian__c.object-meta.xml
<CustomObject>
    <label>Parent/Guardian</label>
    <nameField>
        <label>Parent/Guardian Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parent/Guardians</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>