force-app/main/default/objects/Parent_Guardian__c/fields/Relationship_to_Student__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_Student__c</fullName>
    <label>Relationship to Student</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>