force-app/main/default/objects/Parent_Guardian__c/fields/School__c.field-meta.xml
<CustomField>
    <fullName>School__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>School</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Parent/Guardians</relationshipLabel>
    <relationshipName>Parent_Guardians</relationshipName>
    <type>Lookup</type>
</CustomField>