force-app/main/default/objects/Parent_Guardian__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Student__c</columns>
    <columns>Relationship_to_Student__c</columns>
    <columns>Contact_Information__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>